--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -110,42 +110,12 @@
   changed_when: grafana_ds_sqlproc.stdout == 'CHANGED'
   notify: service_restart_grafana
   tags: grafana
-  
 
 - name: install grafana plugins
   grafana_plugin:
     name: "{{ item }}"
     state: present
-  with_items:
-  - raintank-worldping-app
-  - grafana-simple-json-datasource
-  - fetzerch-sunandmoon-datasource
-  - grafana-worldmap-panel
-  - grafana-clock-panel
-  - grafana-piechart-panel
-  - satellogic-3d-globe-panel
-  - ryantxu-ajax-panel
-  - michaeldmoore-annunciator-panel
-  - farski-blendstat-panel
-  - yesoreyeram-boomtable-panel
-  - briangann-gauge-panel
-  - briangann-datatable-panel
-  - jdbranham-diagram-panel
-  - natel-discrete-panel
-  - larona-epict-panel
-  - agenty-flowcharting-panel
-  - mtanda-histogram-panel
-  - natel-influx-admin-panel
-  - michaeldmoore-multistat-panel
-  - digiapulssi-organisations-panel
-  - bessler-pictureit-panel
-  - natel-plotly-panel
-  - grafana-polystat-panel
-  - corpglory-progresslist-panel
-  - snuids-radar-panel
-  - scadavis-synoptic-panel
-  - marcuscalidus-svg-panel
-  - gretamosa-topology-panel
+  with_items: grafana_plugins
+  when: grafana_install_plugins
   notify: service_restart_grafana
   tags: grafana
-    
