- fix grafana plugins install error - enhance mariadb indempotency

--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -48,8 +48,7 @@
   - { section: 'server',            option: 'http_port',            value: "{{ grafana_http_port }}" }
   - { section: 'server',            option: 'domain',               value: "{{ grafana_domain }}" }
   - { section: 'server',            option: 'root_url',             value: "http://{{ grafana_domain }}{{ grafana_root_url }}/" }
-  - { section: 'security',          option: 'admin_user',           value: "{{ mariadb_user }}" }
-  - { section: 'security',          option: 'admin_password',       value: "{{ mariadb_pwd }}" }
+  - { section: 'security',          option: 'admin_user',           value: 'admin' }
   - { section: 'analytics',         option: 'reporting_enabled',    value: 'false' }
   - { section: 'analytics',         option: 'check_for_updates',    value: 'false' }
   - { section: 'database',          option: 'type',                 value: 'mysql' }
@@ -69,7 +68,7 @@
   - { section: 'auth.grafana_com',  option: 'enabled',              value: 'false' }
   - { section: 'auth.proxy',        option: 'enabled',              value: 'true' }
   - { section: 'auth.proxy',        option: 'header_name',          value: 'X-WEBAUTH-USER' }
-  - { section: 'auth.proxy',        option: 'header_property',      value: 'username' }
+  - { section: 'auth.proxy',        option: 'header_property',      value: 'user_name' }
   - { section: 'auth.proxy',        option: 'auto_sign_up',         value: 'false' }
   - { section: 'auth.basic',        option: 'enabled',              value: 'false' }
   - { section: 'auth.ldap',         option: 'enabled',              value: 'false' }
@@ -98,7 +97,7 @@
   grafana_plugin:
     name: "{{ item }}"
     state: present
-  with_items: grafana_plugins
+  with_items: "{{ grafana_plugins }}"
   when: grafana_install_plugins
   notify: service_restart_grafana
   tags: grafana
