initial implementation of RGM distribution system

--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -58,6 +58,7 @@
   - kibana
   - nrdp
   - rgmapi
+  - distrib
   notify: service_reload_http
 
 ## restart apache now as we'll use RGM API later on role
