--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -11,6 +11,9 @@
     state: present
   vars:
     packages: "{{ packages_apache }}"
+  tags:
+  - http
+  - php
 
 ## add apache user to rgm group
 
@@ -19,6 +22,7 @@
     name: apache
     groups: " {{ rgm_group }}"
     append: yes
+  tags: http
 
 ## php configuration
 
@@ -34,6 +38,7 @@
   - { section: 'PHP',  option: 'max_execution_time', value: '300' }
   - { section: 'PHP',  option: 'error_reporting',    value: 'E_ERROR' }
   notify: service_reload_http
+  tags: php
 
 ## apache configuration
 
@@ -43,6 +48,7 @@
     regexp: '^DocumentRoot'
     line: "DocumentRoot \"{{ rgm_root_path }}/rgmweb\""
   notify: service_reload_http
+  tags: http
 
 - name: Install RGM httpd config files
   template:
@@ -60,7 +66,9 @@
   - rgmapi
   - distrib
   notify: service_reload_http
+  tags: http
 
 ## restart apache now as we'll use RGM API later on role
 - name: flush handlers
   meta: flush_handlers
+  tags: http
