--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,6 +41,9 @@ grafana_rgm_dashboards: "{{ rgm_root_path }}/grafana/dashboards"
 # Windows Beats installation base patch
 winbeats_base_path: 'C:\Program Files'
 
+# Default swappiness for RGM
+sysctl_swappiness: 10
+
 ### RPM packages ###
 packages_system:
 - bash-completion
