--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,9 @@
 # defaults file for ansible-role-rgm
 # vim: bs=2 sw=2 expandtab:
 
+rgm_admin_user: 'admin'
+rgm_admin_password: 'admin'
+
 rgm_root_path: /srv/rgm
 
 # system users/groups
